<resources>
    <string name="app_name" translatable="false">Video Downloader</string>
    <string name="one">Are you looking for an app that helps you to download and save WhatsApp status images and videos? Then Save Status - Download Status is definitely what you are looking for.

Save Status - Download Status App helps you to save WhatsApp status very easily.

It will save videos and images from WhatsApp Status to your Android device. This will keep the status images and videos for you forever and you can share with you friends and in social media later.Try once installing Save Status - Download Status app, you will definitely like this.

Steps to use it

• Open your WhatsApp app.
• View your contacts status.
• Come back to Save Status app and save which ever images and videos you want.</string>
    <string name="two">Its so simple.

Features
- No login required, easily accessible.
- Save status quickly
- In app video player is there to see play videos.
- You can view saved images and videos in gallery easily.
- Easy to share downloaded videos and photos of WhatsApp Status
- App size is very small.
</string>
    <string name="three">Want to download status videos and photos your friends posted?
Then Status Saver - Video Download is definitely what you are looking for.

Status Saver - Video Download app helps you view, save, and share images and video status very easily.

Steps to save status:
1. Open the app and watch the status.
2. If the status is a video, please watch the entire video.
3. Come back to Status Saver app to save which ever images and videos you want!

Features:
- Direct use, no login required
- One tap status save option
- One tap share status option and reshare
- In app photo viewer and video player to view the saved images and videos
- Repost the status with share button.</string>
    <string name="four">"Looking for a comprehensive solution for your WhatsApp needs? Our app is your one-stop destination! Whether you're seeking captivating video statuses from 'Friends' or aiming to recover deleted messages on WhatsApp, we've got you covered.

**WhatsApp Status Features:**

- **Video Statuses:** Find the most engaging video statuses for WhatsApp. Save, repost, and share them effortlessly with friends.

- **Message Recovery:** Curious about deleted messages on WhatsApp? Our app notifies you whenever photos, videos, or messages get removed from your chat.</string>
    <string name="five">- **Quick Downloads:** Save your favorite videos swiftly with a simple click.

- **Media Recovery:** Retrieve deleted messages, pictures, and videos from your WhatsApp chat.

**User Guide:**

1. Open the app and explore the available statuses.

2. Select your preferred status.

3. Click the download button to save videos &amp; images to the app or your phone gallery.

**Important Notes:**

- This status app is an independent tool for downloading WhatsApp videos &amp; statuses and is not affiliated with WhatsApp.

- We do not endorse the re-use of any downloaded media by the user.</string>
    <string name="six">Our video downloader app for Android makes it easy to download and enjoy your favorite videos anytime, anywhere. With support for a wide range of platforms. you can download high-quality videos directly to your device. Our app is designed to be fast and efficient, with lightning-fast download speeds and a user-friendly interface. Plus, our app is constantly updated with the latest features and improvements, ensuring you always have the best video downloading experience possible, Our app features a built-in browser that makes it easy to browse and download videos from your favorite platforms. You can search for videos by keyword or paste the video URL into the app to start the download process. Our app also supports multiple video resolutions and formats, so you can choose the format that works best for your device. Additionally, you can create playlists to organize your downloaded videos and share your favorite videos with friends and family.</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light theme</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="notification_channel_id" translatable="false">All Mp4 Tube Video Downloader</string>
    <string name="notification_channel_name">Popup Player</string>
    <string name="notification_channel_description">Notifications for Popup Player</string>
    <string name="general_channel_name">General</string>
    <string name="notification_action_repeat">Repeat</string>
    <string name="notification_action_shuffle">Shuffle</string>
    <string name="notification_action_buffering">Buffering</string>
    <string name="notification_action_nothing">Nothing</string>
    <string name="notification_slot_0_key" translatable="false">notification_slot_0_key</string>
    <string name="notification_slot_1_key" translatable="false">notification_slot_1_key</string>
    <string name="notification_slot_2_key" translatable="false">notification_slot_2_key</string>
    <string name="notification_slot_3_key" translatable="false">notification_slot_3_key</string>
    <string name="notification_slot_4_key" translatable="false">notification_slot_4_key</string>
    <string name="notification_slot_compact_0_key" translatable="false">notification_slot_compact_0_key</string>
    <string name="notification_slot_compact_1_key" translatable="false">notification_slot_compact_1_key</string>
    <string name="notification_slot_compact_2_key" translatable="false">notification_slot_compact_2_key</string>
    <string name="last_resize_mode" translatable="false">last_resize_mode</string>
    <string name="playback_speed_key" translatable="false">playback_speed_key</string>
    <string name="playback_pitch_key" translatable="false">playback_pitch_key</string>
    <string name="playback_skip_silence_key" translatable="false">playback_skip_silence_key</string>
    <string name="subscribe_button_title">Subscribe</string>
    <string name="subscribed_button_title">Subscribed</string>
    <string name="unsubscribed">Unsubscribe</string>
    <string name="subscription_change_failed">Unable to change subscription</string>
    <string name="subscription_update_failed">Unable to update subscription</string>
    <string name="tab_subscriptions">Subscription</string>
    <string name="upload_date_text">Published on %1$s</string>
    <string name="short_thousand">K</string>
    <string name="short_million">M</string>
    <string name="short_billion">B</string>
    <string name="no_subscribers">No subscribers</string>
    <plurals name="subscribers">
        <item quantity="one">%s subscriber</item>
        <item quantity="other">%s subscribers</item>
    </plurals>
    <string name="no_views">No views</string>
    <plurals name="views">
        <item quantity="one">%s view</item>
        <item quantity="other">%s views</item>
    </plurals>
    <string name="no_videos">No videos</string>
    <string name="videos">Videos</string>
    <string name="no_one_watching">No one is watching</string>
    <plurals name="watching">
        <item quantity="one">%s watching</item>
        <item quantity="other">%s watching</item>
    </plurals>
    <string name="no_one_listening">No one is listening</string>
    <plurals name="listening">
        <item quantity="one">%s listener</item>
        <item quantity="other">%s listeners</item>
    </plurals>
    <string name="charset_most_special_characters_value" translatable="false">[\\n\\r|\\?*&lt;":&gt;/']+</string>
    <string name="title_activity_history">History</string>
    <string name="delete_item_search_history">Do you want to delete this item from search history?</string>
    <string name="title_recently_played">Recently Played</string>
    <string name="title_most_played">Most Played</string>
    <string name="trending">Trending</string>
    <string name="discover">Discover</string>
    <string name="library">Library</string>
    <string name="music">Music</string>
    <string name="films">Movies</string>
    <string name="gaming">Gaming</string>
    <string name="title_activity_popup_player">Popup Player</string>
    <string name="play_queue_remove">Remove</string>
    <string name="start_here_on_main">Play</string>
    <string name="play_queue_stream_detail">Details</string>
    <string name="youtube" translatable="false">YT</string>
    <string name="new_playlist">Playlist</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="playlist_name_input">Playlist name</string>
    <string name="append_playlist">Add to Playlist</string>
    <string name="set_as_playlist_thumbnail">Set as Playlist Thumbnail</string>
    <string name="bookmark_playlist">Add Playlist</string>
    <string name="added_playlist_to_bookmark">Added Playlist to Library</string>
    <string name="removed_playlist_from_bookmark">Removed the Playlist from Library</string>
    <string name="delete_playlist_prompt">Do you want to delete this playlist?</string>
    <string name="playlist_creation_success">Playlist created</string>
    <string name="playlist_add_stream_success">Added to playlist</string>
    <string name="playlist_thumbnail_change_success">Playlist thumbnail has been changed</string>
    <string name="caption_none">Captions</string>
    <string name="caption_auto_generated">Auto-generated</string>
    <string name="playback_speed_normal">Normal</string>
    <string name="example_video_title">All Mp4 Tube Video Downloader Video Title</string>
    <string name="example_channel_title">All Mp4 Tube Video Downloader</string>
    <string name="settings">Settings</string>
    <string name="default_resolution_title">Default video resolution</string>
    <string name="default_popup_resolution_title">Default Popup resolution</string>
    <string name="show_higher_resolutions_title">Show higher resolution</string>
    <string name="show_higher_resolutions_summary">Only some devices support playing 2K/4K videos</string>
    <string name="popup_tips_key">popup_tips_key</string>
    <string name="popup_tips_title">Popup window</string>
    <string name="popup_tips_summary">Long press the Popup window in three seconds to change the size</string>
    <string name="popup_remember_size_pos_title">Save Popup size and position</string>
    <string name="popup_remember_size_pos_summary">Save last size and position of Popup</string>
    <string name="metadata_cache_wipe_title">Clear all cached</string>
    <string name="metadata_cache_wipe_summary">Remove all cached data</string>
    <string name="metadata_cache_wipe_complete_notice">All cached data deleted</string>
    <string name="auto_queue_title">Autoplay next video</string>
    <string name="auto_queue_summary">When you finish a video, another plays automatically</string>
    <string name="show_search_suggestions_title">Search suggestions</string>
    <string name="show_search_suggestions_summary">Show suggestions when searching</string>
    <string name="enable_search_history_title">Search History</string>
    <string name="play_all">Play All</string>
    <string name="controls_popup_title">Popup</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="download">Download</string>
    <string name="clear_download_history">Clear download history</string>
    <string name="start_downloads">Start downloads</string>
    <string name="pause_downloads">Pause downloads</string>
    <string name="video">Video</string>
    <string name="no_video_found">No Video Found</string>
    <string name="no_video_found_des">No video description found</string>
    <string name="how_to_download">How to Download</string>
    <string name="second_how_too">2. Share with All in One Status Saver</string>
    <string name="or_download_using_copied_link">or Download using copied link</string>
    <string name="fourth_how_too">2. Open All in One Status Saver</string>
</resources>