<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16.0dip">

        <Button
            android:id="@+id/btnOkDialogNoVideoFound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:background="@drawable/bg_rec_round_corner_primary_rand"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="22.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25.0dip"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20.0dip"
                app:srcCompat="@drawable/ic_download_circle_gray_rand" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20.0dip"
                app:srcCompat="@drawable/ic_arrow_right_rand" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_download_circle_primary_rand" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25.0dip"
            android:maxLines="2"
            android:text="@string/no_video_found"
            android:textColor="@color/black"
            android:textSize="18.0sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25.0dip"
            android:text="@string/no_video_found_des"
            android:textColor="#ff5b5b5b" />
    </LinearLayout>
</LinearLayout>