<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LLHowToLayout"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/how_to_download"
        android:textColor="@color/white"
        android:padding="15dp"
        android:background="@drawable/social_item_bg"
        android:gravity="center"
        android:id="@+id/tvHowToHeadOne"
        android:textSize="16sp"
        android:fontFamily="@font/bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LLHowToOne"
        android:elevation="3dp"
        android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="1. Open TikTok"
        android:id="@+id/tvHowTo1"
        android:fontFamily="@font/med"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_stroke"
        android:id="@+id/im_howto1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/second_how_too"
        android:id="@+id/tvHowTo2"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/med"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_stroke"
        android:layout_margin="10dp"
        android:id="@+id/im_howto2"
        />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bold"
        android:id="@+id/tvHowToHeadTwo"
        android:text="@string/or_download_using_copied_link"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="3dp"
        android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:text="1. Open TikTok"
        android:fontFamily="@font/med"
        android:id="@+id/tvHowTo3"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_stroke"
        android:id="@+id/im_howto3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fourth_how_too"
        android:id="@+id/tvHowTo4"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:textAlignment="center"
        android:fontFamily="@font/med"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_stroke"
        android:id="@+id/im_howto4" />
    </LinearLayout>
</LinearLayout>

</layout>